--- a/flags app/index.html
+++ b/flags app/index.html
@@ -7,11 +7,29 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Document</title>
+		<style>
+			.flag-cont
+			{
+				display: grid;
+				grid-template-columns: 100px 100px;
+			}
+			.flag-img 
+			{
+				width: 100%;
+			}
+		</style>
 	</head>
 	<body>
-    <input type="text" value="qwerty">
-    <button>get flag</button>
-
-    <script src="script.js"></script>
-  </body>
+		<input
+			type="text"
+			value="ca"
+		/>
+		<button>get flag</button>
+		<div class="flag-cont">
+			
+		</div>
+		<script src="script.js"></script>
+	</body>
 </html>
+
+<!-- https://github.com/mkvvmk25/KLU-2024-NOV -->
